syntax = "proto3";
package proto;
option go_package = "/proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

message Community {
  string id                            = 1;
  string owner_id                      = 2;
  string owner_name                    = 3;
  string slug                          = 4;
  string name                          = 5;
  string description                   = 6;
  string rules                         = 7;
  int32 member_count                   = 8;
  int32 post_count                     = 9;
  int32 reputation                     = 10;  // FR-455-458: sum(post_likes) + (sum(comments) Ã— 0.1)
  bool is_banned                       = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
  bool is_archived                     = 14;
  google.protobuf.Timestamp archived_at = 15;
}

enum PostStatus {
  POST_STATUS_UNSPECIFIED = 0;
  POST_STATUS_DRAFT       = 1;
  POST_STATUS_PUBLISHED   = 2;
}

message Post {
  string id                              = 1;
  string community_id                    = 2;
  string community_name                  = 3;
  string author_id                       = 4;
  string author_name                     = 5;
  string title                           = 6;
  google.protobuf.Struct content         = 7;  // JSON structured content
  PostStatus status                      = 8;
  int32 like_count                       = 9;
  int32 comment_count                    = 10;
  bool is_liked_by_me                    = 11;
  bool is_bookmarked_by_me               = 12;
  google.protobuf.Timestamp created_at   = 13;
  google.protobuf.Timestamp updated_at   = 14;
  google.protobuf.Timestamp published_at = 15;
}

message MediaAttachment {
  string url       = 1;
  string type      = 2;  // image, video, audio, gif
  int64 size_bytes = 3;
}

message Comment {
  string id                            = 1;
  string parent_comment_id             = 2;
  string post_id                       = 3;
  string author_id                     = 4;
  string author_name                   = 5;
  string author_avatar                 = 6;
  string content                       = 7;
  repeated MediaAttachment attachments = 8;
  int32 like_count                     = 9;
  bool is_liked_by_me                  = 10;
  bool is_edited                       = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
}

enum CommentEventType {
  COMMENT_EVENT_TYPE_UNSPECIFIED = 0;
  COMMENT_EVENT_TYPE_CREATED     = 1;
  COMMENT_EVENT_TYPE_UPDATED     = 2;
  COMMENT_EVENT_TYPE_DELETED     = 3;
}

message CommentEvent {
  CommentEventType event_type         = 1;
  Comment comment                     = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message UserProfile {
  string id                            = 1;
  string name                          = 2;
  string avatar_url                    = 3;
  string banner_url                    = 4;
  string description                   = 5;
  int32 reputation                     = 6;
  int32 follower_count                 = 7;
  int32 following_count                = 8;
  bool is_banned                       = 9;
  bool is_following                    = 10;  // if current user follows this user
  bool is_online                       = 11;  // online if last_activity < 5 minutes (FR-464)
  google.protobuf.Timestamp created_at = 12;
}

message CurrentUserProfile {
  string id                            = 1;
  string name                          = 2;
  string email                         = 3;
  bool email_verified                  = 4;
  string avatar_url                    = 5;
  string banner_url                    = 6;
  string description                   = 7;
  int32 reputation                     = 8;
  int32 follower_count                 = 9;
  int32 following_count                = 10;
  int32 joined_communities_count       = 11;
  int32 active_sessions_count          = 12;
  google.protobuf.Timestamp created_at = 13;
}

message UserStatistics {
  double reputation         = 1;
  int32 communities_joined  = 2;
  int32 communities_created = 3;
  int32 posts_created       = 4;
  int32 comments_created    = 5;
  int32 post_likes          = 6;
  int32 comment_likes       = 7;
}
